2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrush.c (gimp_brush_get_new_preview): plugged a
	memory leak caused by one variable shadowing another.

	* app/vectors/gimpvectors-import.c (gimp_vectors_import): free the
	SvgPath structs.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/vectors/gimpvectors-warp.c (gimp_stroke_warp_point): don't
	leak three GimpCoords per warped point (eek).

2007-05-21  Sven Neumann  <sven@gimp.org>

	* themes/Default/images/preferences/Makefile.am: formatting.

2007-05-21  Sven Neumann  <sven@gimp.org>

	* autogen.sh: also look for automake-1.10.

2007-05-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimp.c (gimp_message): documentation.

	* app/actions/documents-commands.c
	* app/widgets/gimplayertreeview.c
	* app/widgets/gimptoolbox-dnd.c: pass parent widgets to gimp_message().

2007-05-21  Sven Neumann  <sven@gimp.org>

	* app/pdb/gimpprocedure.c (gimp_procedure_validate_args): pass the
	GimpProgress to gimp_message().

	* plug-ins/common/bumpmap.c: reduced number of progress updates.

2007-05-21  Jakub Steiner <jimmac@ximian.com>

	* plug-ins/helpbrowser/wilber-reading.{svg,png}: new icon.

2007-05-21  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite.h: formatting.

2007-05-21  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c: use 'program-name' instead of 'name'
	when compiling against GTK+ >= 2.11.0 (see bug #345822). Also set
	the title explicitely (see bug #418434).

2007-05-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimptemplate.c: use a #define for the default resolution.

2007-05-20  Simon Budig  <simon@gimp.org>

	* plug-ins/common/tiff-save.c: correctly pad the path name.

2007-05-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c: moved duplicated code to a utility
	function.

2007-05-20  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainercombobox.c
	* app/widgets/gimpcontainerentry.c